lab1/Test/L1-A-11-88.cmm
float ;
int GqTdAnWC1nUxXgCO0 ( struct rBtT9ZY pKzh2Xb5 || 
  ) {
  int D4eJLWC_VLxKIe8kFWg [ 30672628 ] = B6RVO3lVp 
    = Rb9F72ywl && xZZ >= PEhi + xG1qsr_yDZfWi7058Y2 / 
    - ! vG1Hpami9trlWpW7lo9k ( tNzOKY7 || VM == E1NWINYuNqDwA 
    - ( KtnwfE27fcjvmfgw || O3vGmn_ > CVnwdpG [ hTyd4 
    && ceypAAOWElwSdy / AG ( QDcTTR5MkV95fzBtT0dw , h6NFpS9zX1BfJMew 
    , wBq17Rp9dyqnNuV = Q || CaX0e_BMq_TPluZ < zENIZnhXkpRr78JE 
    + ! ! - pOM6e4ZKsG ( ASCP26FU1MCz3mZIKGi != vO1Jo 
    ) / bHuz3ZlBcEo3PM * - / LblvHFpN . tj57OU + 1493971063 
    ) <= 180926789.1353781879 ] ) * vLq76 ( ) ) . HH3r 
    ;
}
struct VpEOOW7d8zPEUhjdrrL_ {
  int AmkIJKWeIx1 , xD7mh8MwEDT ;
}xO3BPAQfIAyQ , RKyNeKgIpt 

;
int ;
int WRn9 
;
int ( int xWZRYid09i , int aBIHtCRdMI ) {
}
struct {
};
int wACo ( ) {
  QHRNPBydjvp031P ;
  _da72LVCdJPaRp ;
  if ( v )   if ( JiD5NXpbuL )   while ( de79PBdrZLQx0J5 
    ) {
    int cIf0n21dzk ;
    struct D_4caowDkn9Q O ;
    HdIozXq2OYIau ;
    Pg ;
    TPPtrc0MgDgFsJNE ;
int   }
else   if ( fms6oohRFq5r6 )   aZQAZW6AvtGqsL5yA ;
else   bFaDBzWfVJa ;


else   if ( bdV )   if ( ut5VTvt   while ( RDi2cjifyW 
    ) {
    struct DJ jyEruM_UT81hS0D7rK7k ;
    return np27A4xgvNuISZkpoAt ;
  }
else   OXURDgoLOQPZMxQ ;



}
